# rdmo

./: .coveragerc  .eslintrc.js  .gitignore  .ignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  ARCHITECTURE.md  AUTHORS  CHANGELOG  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  MANIFEST.in  NOTICE  README.md  README.rst  SECURITY.md  STYLE.md  _setup.cfg  bower.json  catalogs.json  conftest.py  django-rest-swagger.yaml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mysql.yml  postgres.yml  pre-commit-autoupdate.yml  pytest.yml  sqlite3.yml
DMPwerkzeug/: default.local.py  settings.py  test.local.py  urls.py  wsgi.py
DMPwerkzeug/settings/: base.py  development.py  local.py  travis.py
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0003_hint_renamed_to_help_text.py  0004_permission_added.py
apps/accounts/: __init__.py  admin.py  app_config.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  viewsets.py
apps/catalogs/: admin.py  models.py  tests.py  urls.py  views.py
apps/conditions/: __init__.py  admin.py  app_config.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
apps/core/: exceptions.py  models.py  permissions.py  renderers.py  serializers.py  test_mixins.py  tests.py  utils.py  validators.py  views.py
apps/domain/: __init__.py  admin.py  app_config.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
apps/interview/: admin.py  models.py
apps/interviews/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
apps/options/: __init__.py  admin.py  app_config.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
apps/plans/: admin.py  models.py  tests.py
apps/projects/: __init__.py  admin.py  app_config.py  forms.py  models.py  renderers.py  rules.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  views.py  viewsets.py
apps/questions/: __init__.py  admin.py  app_config.py  managers.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
apps/tasks/: __init__.py  admin.py  app_config.py  managers.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
apps/views/: __init__.py  admin.py  app_config.py  models.py  renderers.py  serializers.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  views.py  viewsets.py
components/angular/: .bower.json
components/angular-resource/: .bower.json
components/bootstrap-datepicker/: .bower.json
components/codemirror/: .bower.json
components/components-font-awesome/: .bower.json
components/moment/: .bower.json
config/settings/: local.py
core/: context_processors.py  tests.py  utils.py  views.py
core/templatetags/: core_tags.py
docs/: Makefile  README.md  conf.py  dev.md  figures.md  fixtures.md  i18n.md  index.rst  ldap.md  models.dot  production-setup.md  releases.md  setup-linux.md  setup-osx.md  setup-windows.md  shibboleth.md  social-apps.md  testing.md
docs/administration/: allauth.rst  index.rst  site.rst  tokens.rst  users.rst
docs/configuration/: cache.rst  databases.rst  email.rst  export-formats.rst  general.rst  index.rst  logging.rst  themes.rst
docs/deployment/: apache.rst  collectstatic.rst  development.rst  index.rst  nginx.rst  production.rst  redeploy.rst
docs/development/: documentation.rst  figures.rst  i18n.rst  index.rst  testing.rst
docs/figures/: models.dot
docs/img/: models.dot
docs/installation/: clone.rst  dependecies.rst  dependencies.rst  front-end.rst  index.rst  packages.rst  prerequisites.rst  setup.rst
docs/management/: conditions.rst  domain.rst  export.rst  index.rst  options.rst  questions.rst  tasks.rst  views.rst
docs/upgrade/: index.rst
fixtures/: accounts.json  auth.json  catalogs.json  conditions.json  domain.json  groups.json  interviews.json  options.json  plans.json  projects.json  questions.json  tasks.json  users.json  views.json
fixtures/testing/: core.json  domain.json  projects.json  questions.json
rdmo/: __init__.py  __main__.py  urls.py  wsgi.py
rdmo/accounts/: __init__.py  account.py  adapter.py  admin.py  apps.py  checks.py  forms.py  middleware.py  models.py  rules.py  settings.py  signals.py  socialaccount.py  tests.py  urls.py  utils.py  views.py  viewsets.py
rdmo/catalogs_table/: DW-dev-notes.md  columns.py  filters.py  forms.py  requirements.txt  tables.py  urls.py  utils.py  views.py  viewsets.py
rdmo/conditions/: __init__.py  admin.py  apps.py  constants.py  imports.py  models.py  renderers.py  tests.py  urls.py  utils.py  validators.py  views.py  viewsets.py
rdmo/config/: admin.py  apps.py  checks.py  constants.py  helpers.py  imports.py  legacy.py  managers.py  models.py  plugin_base.py  plugin_resolver.py  plugin_type_constants.py  plugin_types.py  plugins.py  utils.py  validators.py  viewsets.py
rdmo/core/: __init__.py  admin.py  apps.py  checks.py  constants.py  exceptions.py  exports.py  filters.py  forms.py  import_helpers.py  imports.py  mail.py  managers.py  models.py  pandoc.py  permissions.py  plugins.py  renderers.py  schema.py  serializers.py  (+10 more)
requirements/: all.txt  base.txt  common.txt  dev.txt  development.txt  ldap.txt  memcached.txt  minimal.txt  mysql.txt  pdf.txt  production.txt  shibboleth.txt  test.txt  testing.txt  travis.txt
static/: fonts.scss  style.css  style.scss  variables.scss
templates/: layout.html
testing/: manage.py  runtests.py
webpack/: common.config.js  dev.config.js  prod.config.js
(+2815 files in other folders)
